--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-os-sys
 opencv-python
 numpy 
-pyautogui
-sounddevice
+PyAutoGUI==0.9.53
+sounddevice==0.4.4
 logging
-requests
-python-telegram-bot
-scipy
-pyautogui
+requests==2.25.1
+python-telegram-bot==13.13
+scipy==1.8.0
+os-sys
